<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.visha.smarttechnician.RegisterTechnician">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enter_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/technicianEnterNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:id="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/category"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:dropDownWidth="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/TcontinueButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:onClick="onContinueClicked"
            android:text="@string/continue_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:translationY="150dp" />
    </LinearLayout>

</RelativeLayout>
